k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discovery-server
  namespace: test
spec:
  selector:
    matchLabels:
      app: discovery-server
  replicas: 1
  template:
    metadata:
      labels:
        app: discovery-server
    spec:
      containers:
        - name: discovery-server
          imagePullPolicy: Always
          image: 172.29.7.157:85/test/eureka-server:<BUILD_TAG>
          resources:
            requests:
              memory: 384Mi
              cpu: 250m
            limits:
              memory: 384Mi
              cpu: 500m
          volumeMounts:
            - name: host-time
              mountPath: /etc/localtime
            - name: host-timezone
              mountPath: /etc/timezone
          ports:
            - containerPort: 8761
      volumes:
        - name: host-time
          hostPath:
            path: /etc/localtime
        - name: host-timezone
          hostPath:
            path: /etc/timezone
#      nodeSelector:
#        labelName: dop-node2
---
apiVersion: v1
kind: Service
metadata:
  name: discovery-server
  namespace: test
  labels:
    app: discovery-server
spec:
  type: ClusterIP
  ports:
  - port: 8761
    protocol: TCP
    targetPort: 8761
  selector:
    app: discovery-server
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: discovery-server
  namespace: test
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
 rules:
 - host: eureka.devopsplus.com.cn
   http:
     paths:
       - path: /
         pathType: Prefix
         backend:
           service:
             name: discovery-server
             port:
               number: 8761
